# gsp-parse

./: Cargo.toml  README.md  fw_list  recreate_hw_json.sh  recreate_rust.sh
examples/: 535.11.01.h  nouveau_want_list.json  nova_want_list.json
generate/: main.rs
generate_hw/: main.rs
generate_rust/: main.rs
src/: main.rs  runit.sh
