[package]
name = "gsp-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="generate"
path="generate/main.rs"

[[bin]]
name="generate_hw"
path="generate_hw/main.rs"

[[bin]]
name="json"
path="src/main.rs"

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clang = { git = "https://github.com/airlied/clang-rs/", features = ["clang_9_0"] }
